# ska-mid-itf-environments

./: .gitignore  .gitlab-ci.yml  Makefile  README.md  pyproject.toml  steps.sh
.gitlab/ci/: .jobs.yaml  .rules.yaml
.gitlab/ci/file-browser/: .pipeline.yaml
.gitlab/ci/test-equipment/: .pipeline.yaml
charts/file-browser/: .gitignore  Chart.yaml
charts/file-browser/templates/: ingress.yaml
charts/ska-mid-itf/: Chart.yaml
charts/ska-mid-itf-environments-file-browser/: Chart.yaml  values.yaml
charts/ska-mid-itf-environments-file-browser/scripts/: setup_config.sh
charts/ska-mid-itf-environments-file-browser/secrets/: example.json
charts/ska-mid-itf-environments-file-browser/templates/: _helpers.tpl  configmap.yaml  deployment.yaml  service.yaml
charts/ska-mid-itf-environments-test-equipment/: Chart.yaml  values.yaml
charts/ska-mid-itf-environments-test-equipment-verification/: Chart.yaml  values.yaml
charts/ska-mid-itf-environments-test-equipment/templates/: chartinfo.yaml
charts/ska-mid-itf/templates/: chartinfo.yaml
charts/test-equipment/: Chart.yaml
charts/test-equipment-verification/: Chart.yaml
docs/src/: conf.py  index.rst  purpose.rst
resources/makefiles/: file-browser.mk  test-equipment-dev.mk  test-equipment.mk
